--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
             font-family: Arial;
-            background-color: #f3f3f3;
+            background-color: #e7d2d2;
         }
         .box {
             border: 1px solid black;
